validation login form

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,16 +1,32 @@
-<div class="card">
+<form class="card" [formGroup]="formLogin" (ngSubmit)="onLogin()">
     <div class="card-content">
         <span class="card-title">Войти в систему</span>
         <div class="input-field">
-            <input id="email" type="email" required>
+            <input formControlName="email" id="email" type="email"
+                [ngClass]="{'invalid': formLogin.get('email').invalid && formLogin.get('email').touched}">
             <label for="email">Email:</label>
+            <span class="helper-text red-text" *ngIf="formLogin.get('email').invalid && formLogin.get('email').touched">
+                <span *ngIf="formLogin.get('email').errors['required']">Email не должен быть пустым</span>
+                <span *ngIf="formLogin.get('email').errors['email']">Введите корректный email адрес</span>
+            </span>
         </div>
         <div class="input-field">
-            <input id="password" type="password" required>
+            <input id="password" type="password" formControlName="password"
+                [ngClass]="{'invalid': formLogin.get('password').invalid && formLogin.get('password').touched}">
             <label for="password">Пароль:</label>
+            <span class="helper-text red-text" *ngIf="formLogin.get('password').invalid && formLogin.get('password').touched">
+                <span *ngIf="formLogin.get('password').errors['required']">Пароль не должен быть пустым</span>
+                <span
+                    *ngIf="formLogin.get('password').errors['minlength'] && formLogin.get('password').errors['minlength']['requiredLength']">
+                    Пароль должен быть больше {{formLogin.get('password').errors['minlength']['requiredLength']}} символов.
+                    Сейчас {{formLogin.get('password').errors['minlength']['actualLength']}}
+                </span>
+            </span>
         </div>
     </div>
     <div class="card-action">
-        <button class="modal-action btn waves-effect">Войти</button>
+        <button type="submit" class="modal-action btn waves-effect" [disabled]="formLogin.invalid">
+            Войти
+        </button>
     </div>
-</div>
+</form>
