--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -25,7 +25,7 @@
         </div>
     </div>
     <div class="card-action">
-        <button type="submit" class="modal-action btn waves-effect" [disabled]="formLogin.invalid">
+        <button type="submit" class="modal-action btn waves-effect" [disabled]="formLogin.invalid || formLogin.disabled">
             Войти
         </button>
     </div>
