--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,16 +1,32 @@
-<div class="card">
-    <div class="card-content">
-      <span class="card-title">Создать аккаунт</span>
-      <div class="input-field">
-        <input id="email" type="email" required>
-        <label for="email">Email:</label>
-      </div>
-      <div class="input-field">
-        <input id="password" type="password" required>
-        <label for="password">Пароль:</label>
-      </div>
+<form class="card" [formGroup]="formSignup" (ngSubmit)="onSubmit()">
+  <div class="card-content">
+    <span class="card-title">Создать аккаунт</span>
+    <div class="input-field">
+      <input formControlName="email" id="email" type="email"
+        [ngClass]="{'invalid': formSignup.get('email').invalid && formSignup.get('email').touched}">
+      <label for="email">Email:</label>
+      <span class="helper-text red-text" *ngIf="formSignup.get('email').invalid && formSignup.get('email').touched">
+        <span *ngIf="formSignup.get('email').errors['required']">Email не должен быть пустым</span>
+        <span *ngIf="formSignup.get('email').errors['email']">Введите корректный email адрес</span>
+      </span>
     </div>
-    <div class="card-action">
-      <button class="modal-action btn waves-effect">Создать</button>
+    <div class="input-field">
+      <input id="password" type="password" formControlName="password"
+        [ngClass]="{'invalid': formSignup.get('password').invalid && formSignup.get('password').touched}">
+      <label for="password">Пароль:</label>
+      <span class="helper-text red-text" *ngIf="formSignup.get('password').invalid && formSignup.get('password').touched">
+        <span *ngIf="formSignup.get('password').errors['required']">Пароль не должен быть пустым</span>
+        <span
+          *ngIf="formSignup.get('password').errors['minlength'] && formSignup.get('password').errors['minlength']['requiredLength']">
+          Пароль должен быть больше {{form.get('password').errors['minlength']['requiredLength']}} символов.
+          Сейчас {{form.get('password').errors['minlength']['actualLength']}}
+        </span>
+      </span>
     </div>
   </div>
+  <div class="card-action">
+    <button type="submit" class="modal-action btn waves-effect" [disabled]="formSignup.invalid || formSignup.disabled">
+      Создать
+    </button>
+  </div>
+</form>
