--- a/src/app/categories/categories.component.html
+++ b/src/app/categories/categories.component.html
@@ -1,1 +1,45 @@
-<p>categories works!</p>
+<!-- Первый метод создания flow -->
+<!-- <div class="page-title">
+    <h4>Категории</h4>
+    <button class="waves-effect waves-light btn grey darken-1" routerLink="/categories/new">
+        Добавить категорию
+    </button>
+</div>
+
+<div class="row" *ngIf="!loading">
+    <div class="col s12">
+        <div class="collection">
+            <a *ngFor="let category of categories" href="#!" class="collection-item">
+                {{category.name}}
+            </a>
+        </div>
+    </div>
+</div>
+
+<app-loader *ngIf="loading"></app-loader> -->
+
+<div class="page-title">
+    <h4>Категории</h4>
+    <button class="waves-effect waves-light btn grey darken-1" routerLink="/categories/new">
+        Добавить категорию
+    </button>
+</div>
+
+<div class="row" *ngIf="categories$ | async as categories; else loader">
+    <div class="col s12">
+        <div class="collection" *ngIf="categories.length !== 0; else empty">
+            <a *ngFor="let category of categories" [routerLink]="['/categories', category._id]" class="collection-item">
+                {{category.name}}
+            </a>
+        </div>
+        <ng-template #empty>
+            <div class="center">
+                У вас нет ни одной категории
+            </div>
+        </ng-template>
+    </div>
+</div>
+
+<ng-template #loader>
+    <app-loader></app-loader>
+</ng-template>
